# NLPretext

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  download_spacy_models.sh  index.html  pylintrc  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test_environment.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: cd.yml  ci.yml  ci_actions.yml  greetings.yml  release-drafter.yml
1.1.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
1.1.0/.doctrees/: environment.pickle  index.doctree
1.1.0/_modules/: index.html
1.1.0/_sources/: index.rst.txt
1.1.0/apidoc/: modules.html  nlpretext.augmentation.html  nlpretext.basic.html  nlpretext.cli.html  nlpretext.html  nlpretext.social.html  nlpretext.token.html
1.1.0/tutorials/: basic_notebook.html  index.html
1.2.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
1.2.0/.doctrees/: environment.pickle  index.doctree
1.2.0/_modules/: index.html
1.2.0/apidoc/: modules.html  nlpretext.augmentation.html  nlpretext.basic.html  nlpretext.cli.html  nlpretext.html  nlpretext.social.html  nlpretext.token.html
1.2.0/tutorials/: basic_notebook.html  index.html
1.2.1/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
1.2.1/.doctrees/: environment.pickle  index.doctree
1.2.1/_modules/: index.html
1.2.1/apidoc/: modules.html  nlpretext.augmentation.html  nlpretext.basic.html  nlpretext.cli.html  nlpretext.html  nlpretext.social.html  nlpretext.token.html
1.2.1/tutorials/: basic_notebook.html  index.html
1.2.2/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
1.2.2/.doctrees/: environment.pickle  index.doctree
1.2.2/_modules/: index.html
1.2.2/apidoc/: modules.html  nlpretext.augmentation.html  nlpretext.basic.html  nlpretext.cli.html  nlpretext.html  nlpretext.social.html  nlpretext.token.html
1.2.2/tutorials/: basic_notebook.html  index.html
ci/update-ci-cd/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
config/: config.py
docker/: Dockerfile  README.md  build_docker.sh
docs/: Makefile  conf.py  index.rst  make.bat  modules.rst  nautilus_nlp.config.rst  nautilus_nlp.data.rst  nautilus_nlp.features.rst  nautilus_nlp.models.rst  nautilus_nlp.rst  nautilus_nlp.utils.rst  nautilus_nlp.visualization.rst  nlpretext.augmentation.rst  nlpretext.basic.rst  nlpretext.rst  nlpretext.social.rst
docs/scripts/: buildsite.sh
docs/source/: conf.py  index.rst  nlpretext.augmentation.rst  nlpretext.rst  nlpretext.token.rst
latest/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
latest/.doctrees/: environment.pickle  index.doctree
latest/_modules/: index.html
latest/apidoc/: modules.html  nlpretext.augmentation.html  nlpretext.basic.html  nlpretext.cli.html  nlpretext.html  nlpretext.social.html  nlpretext.token.html
latest/tutorials/: basic_notebook.html  index.html
nautilus/include/: python2.7
nautilus_nlp/: doc.py  preprocessor.py
nautilus_nlp/_config/: config.py  constants.py
nautilus_nlp/_utils/: phone_number.py  stopwords.py
nautilus_nlp/analysis/: keyword_extractor.py  ngrams.py  text_summary.py  visualize.py
nautilus_nlp/classic/: preprocess.py
nautilus_nlp/config/: config.py
nautilus_nlp/data/: french_FEEL.csv  french_numbers.txt  make_dataset.py
nautilus_nlp/models/: Fasttext_embedding.py  Language_detector.py  Spacy_model.py  biterm_model.py  fasttext_classifier.py  fasttext_embedding.py  language_detector.py  nmf_model.py  nmf_seanmf_models.py  seanmf_model.py  sentiment.py  sentiment_detector.py  sk_vectorizer.py  text_vectorizers.py  topic_modeling.py  topic_modeling_short_text.py
nautilus_nlp/preprocessing/: additional_preprocess.py  data_augmentation.py  keyword_extractor.py  lemmatization.py  lemmatizer.py  main_preprocess.py  preprocess.py  preprocessor.py  social_preprocess.py  stemming.py  text_preprocess.py  text_vectorizers.py  token_preprocess.py  tokenizer.py
nautilus_nlp/scripts/: download_ft_langdetect.sh  download_spacy_models.sh  init_langmodel.sh  install_fasttext.sh  install_java.sh  install_mallet.sh
nautilus_nlp/social/: preprocess.py
nautilus_nlp/topic_modeling/: biterm_model.py  lda.py  nmf_model.py  seanmf_model.py  topic_modeling_short_text.py
nautilus_nlp/utils/: Text_processor.py  compat.py  constants.py  emoji.py  encoding.py  export.py  file_loader.py  keyword_extractor.py  lemmatizer.py  ngrams_analysis.py  phone_number.py  preprocess.py  (+9 more)
nlpretext/: __init__.py  preprocessor.py  textloader.py
notebooks/: 0. Text file loader.ipynb  1. Text Preprocessing.ipynb  2. Text processing.ipynb  3. Text Vectorization - TF-IDF.ipynb  4. Topic Modeling.ipynb  5. Topic Modeling - Biterm.ipynb  6. Topic Modeling - short text.ipynb  Benchmark text processing tools.ipynb  Common Text Processing operations.ipynb  Language_identification.ipynb  Open a file, a list of files and detect encoding.ipynb  Sentiment analysis using pre-trained models.ipynb  Sentiment_analysis_FT.ipynb  Spacy_model.ipynb  TF-IDF.ipynb  Text files loader with encoding handler.ipynb  TopicModeling.ipynb  Visualization tools.ipynb  someadditionalfile.txt
preprocessing/: __init__.py  preprocessor.py
tests/: biterm_try.py  test_biterm.py  test_data_augmentation.py  test_doc.py  test_document_loader.py  test_extraction.py  test_file_loader.py  test_fix_bad_encoding.py  test_keyword_extractor.py  test_language_detection.py  test_lemmatization.py  test_ngrams_analysis.py  test_phone_number.py  test_preprocessor.py  test_stemming.py  test_text_summary.py  test_textloader.py  test_tokenizer.py  test_topic_modeling_short_text.py  tests_extraction.py
utils/: phone_number.py  stopwords.py
wiki/: Entities_extraction.md  README.md  Speech_to_text.md  Text_classification.md  Text_processing.md  Topic_Modeling.md
(+157 files in other folders)
