# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nlpretext"
version = "1.2.2"
description = "All the goto functions you need to handle NLP use-cases, integrated in NLPretext"
readme = "README.md"
authors = [
  "artefactory <rafaelle.aygalenq@artefact.com>"
]
license = "Apache Software License 2.0"
repository = "https://github.com/artefactory/NLPretext"
homepage = "https://github.com/artefactory/NLPretext"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"nlpretext" = "nlpretext.cli.__main__:app"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
importlib_metadata = {version = ">=1.6.0", python = "<3.8"}
typer = {extras = ["all"], version = ">=0.3.2"}
rich = ">=10.1.0"
chardet = ">=3.0.4"
emoji = ">=2.0.0"
flashtext = ">=2.7"
ftfy = ">=4.2.0"
mosestokenizer = ">=1.1.0"
nlpaug = ">=1.0.1"
nltk = ">=3.4.2"
numpy = ">1.22.0"
phonenumbers = ">=8.10.12"
regex = ">=2019.8.19"
sacremoses = ">=0.0.13"
scikit-learn = ">=0.23.2"
spacy = ">=3.0.5"
pillow = ">=8.2.1"
thinc = ">=8.0.4"
stop-words = ">=2018.7.23"
pandas = "^1.3"
pyarrow = ">=4.0.0"
fastparquet = ">=0.4.1"
dask = {version = ">=2021.5.0", extras = ["complete"]}
distributed = ">=2021.5.0"
tornado = ">=6.0.3"
torch = {version = "^1.9.0", optional = true}

[tool.poetry.dev-dependencies]
darglint = ">=1.8.0"
isort = ">=5.8.0"
pyupgrade = ">=2.12.0"
black = ">=20.8b1"
mypy = ">=0.812"
bandit = ">=1.7.0"
safety = ">=1.10.3"
pytest = ">=6.2.1"
pytest-cov = ">=2.10.1"
pylint = ">=2.6.0"
pydocstyle = ">=6.0.0"
pre-commit = ">=2.12.0"
mypy-extensions = ">=0.4.3"
nbsphinx = ">=0.8.0"
notebook = ">=6.1.5"
Pygments = ">=2.8.0"
recommonmark=">=0.7.1"
Sphinx = ">=3.5.4"
sphinx-gallery = ">=0.8.1"
sphinxcontrib-applehelp = ">=1.0.2"
sphinxcontrib-devhelp = ">=1.0.2"
sphinxcontrib-htmlhelp = ">=1.0.3"
sphinxcontrib-jsmath = ">=1.0.1"
sphinxcontrib-qthelp = ">=1.0.3"
sphinxcontrib-serializinghtml = ">=1.1.4"
sphinx-autodoc-typehints = ">=1.11.1"
sphinx_rtd_theme = ">=0.5.2"
sphinx-multiversion-pre-post-build = ">=0.2.4"
coverage = ">=5.3"
python-dotenv = ">=0.5.1"
setuptools = ">=40.8.0"
types-emoji = ">=1.2.2"
types-chardet = ">=0.1.3"
types-click = ">=7.1.2"

[tool.poetry.extras]
torch = ["torch"]

[tool.black]
# https://github.com/psf/black
line-length = 100
target-version = ["py38"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 100
